# OOP-Project

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  envconfig.txt  main.cpp  playlists.json  tastatura.txt
.github/workflows/: cmake.yml
headers/: Application.h  Artist.h  ArtistCollection.h  Collection.h  Display.h  DisplayManager.h  EnvironmentSetup.h  Exceptions.h  MediaItem.h  MusicPlayer.h  Playlist.h  PlaylistDisplay.h  Song.h  SongCollection.h  SongDisplay.h  TextBox.h  TextBoxAbstractFactory.h  TextBoxButton.h  TextBoxConcreteFactory.h  TextBoxDelete.h  TextBoxManager.h  TextBoxTab.h  TextBoxTimer.h  TextBoxVolume.h  TextBoxWrite.h  Utility.h
includes/: API.cpp  API.h  Application.cpp  Application.h  Artist.cpp  Artist.h  ArtistCollection.cpp  ArtistCollection.h  Audiobook.cpp  Audiobook.h  Display.cpp  Display.h  EnvironmentSetup.cpp  EnvironmentSetup.h  Exceptions.cpp  Exceptions.h  Media.cpp  Media.h  MediaItem.cpp  MusicPlayer.cpp  MusicPlayer.h  Playlist.cpp  Playlist.h  PlaylistDisplay.cpp  PlaylistDisplay.h  Podcast.cpp  Podcast.h  Song.cpp  Song.h  SongCollection.cpp  SongCollection.h  SongDisplay.cpp  SongDisplay.h  TextBox.cpp  TextBox.h  TextBoxButton.cpp  TextBoxButton.h  TextBoxDelete.cpp  TextBoxDelete.h  TextBoxPlaylist.cpp  (+7 more)
scripts/: run_cppcheck.sh
src/: API.cpp  Application.cpp  Artist.cpp  ArtistCollection.cpp  Collection.cpp  Display.cpp  DisplayManager.cpp  EnvironmentSetup.cpp  Exceptions.cpp  MediaItem.cpp  MusicPlayer.cpp  Playlist.cpp  PlaylistDisplay.cpp  Song.cpp  SongCollection.cpp  SongDisplay.cpp  TextBox.cpp  TextBoxAbstractFactory.cpp  TextBoxButton.cpp  TextBoxConcreteFactory.cpp  TextBoxDelete.cpp  TextBoxManager.cpp  TextBoxPlaylist.cpp  TextBoxTab.cpp  TextBoxTimer.cpp  TextBoxVolume.cpp  TextBoxWrite.cpp  Utility.cpp
